# GEP_Intergration

./: .gitignore  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  CaculateOperation.cpp  CaculateOperation.h  CalculateOperation.h  Gene.cpp  Gene.h  GeneExpressionProgramming  MultiGEP.cpp  MultiGEP.h  README.en.md  README.md  dataSource.cpp  dataSource.h  fileProcess.cpp  fileProcess.h  indivadual.cpp  indivadual.h  individual.cpp  individual.h  main.cpp  parallel.h  parameter.h  paramsettings.h  population.cpp  population.h  run.py  test.cpp  test.h
data/: Algerian_forest_fires_dataset_UPDATE.csv  calculate.py  evaluation.py  evaluation.txt  input.txt  output.txt  parseForestFire.py  parseIris.py  parseSunspot.py  parse_forestfire.py  save_model  sunInput.txt  sunOutput.txt  train.txt
include/: CalculateOperation.h  Gene.h  MultiGEP.h  dataSource.h  individual.h  parameter.h  population.h
src/: Gene.cpp  MultiGEP.cpp  dataSource.cpp  individual.cpp  main.cpp  population.cpp
